[gd_scene load_steps=6 format=3 uid="uid://bnxmxfl4y6pj3"]

[ext_resource type="Script" path="res://ui/creator.gd" id="1_46ron"]
[ext_resource type="Texture2D" uid="uid://5cyhcx1fn0yq" path="res://textures/fire.png" id="2_ogyuy"]
[ext_resource type="Texture2D" uid="uid://drbdrp6ltfa2t" path="res://textures/water.png" id="3_c2isd"]
[ext_resource type="Texture2D" uid="uid://dj44wo7nvsy5s" path="res://textures/plant.png" id="4_sm54u"]
[ext_resource type="Texture2D" uid="uid://b3ddg5xyw6qnr" path="res://textures/fire-player.png" id="4_sycal"]

[node name="Creator" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_46ron")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 10.0
offset_right = 284.0
offset_bottom = 33.0
text = "WHO DARES ENTER THIS WORLD?
"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 280.0
offset_right = 270.0
offset_bottom = 342.0
text = "AWAKEN"

[node name="Study" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Study"]
layout_mode = 0
offset_left = 29.0
offset_top = 53.0
offset_right = 80.0
offset_bottom = 76.0
text = "Study
"

[node name="Fire" type="TextureButton" parent="Study"]
texture_filter = 1
layout_mode = 0
offset_left = 22.0
offset_top = 84.0
offset_right = 38.0
offset_bottom = 100.0
scale = Vector2(5, 5)
texture_normal = ExtResource("2_ogyuy")
stretch_mode = 4

[node name="Water" type="TextureButton" parent="Study"]
texture_filter = 1
layout_mode = 0
offset_left = 114.0
offset_top = 83.0
offset_right = 130.0
offset_bottom = 99.0
scale = Vector2(5, 5)
texture_normal = ExtResource("3_c2isd")
stretch_mode = 4

[node name="Plant" type="TextureButton" parent="Study"]
texture_filter = 1
layout_mode = 0
offset_left = 203.0
offset_top = 85.0
offset_right = 219.0
offset_bottom = 101.0
scale = Vector2(5, 5)
texture_normal = ExtResource("4_sm54u")

[node name="Name" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Input" type="TextEdit" parent="Name"]
layout_mode = 0
offset_left = 33.0
offset_top = 223.0
offset_right = 272.0
offset_bottom = 260.0
text = "Fring"

[node name="Label" type="Label" parent="Name"]
layout_mode = 0
offset_left = 39.0
offset_top = 190.0
offset_right = 86.0
offset_bottom = 213.0
text = "Name"

[node name="Avatar" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 303.0
offset_top = 15.0
offset_right = 335.0
offset_bottom = 47.0
scale = Vector2(10, 10)
texture = ExtResource("4_sycal")

[connection signal="pressed" from="Button" to="." method="_on_awaken_button_pressed"]
[connection signal="pressed" from="Study/Fire" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="Study/Water" to="." method="_on_water_pressed"]
[connection signal="pressed" from="Study/Plant" to="." method="_on_plant_pressed"]
